--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,66 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">  
+   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 </head>
 <body>
+<div id="wrap">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Football Player</a>
+    </div>
 
-<%= yield %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Random Player</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
+<div>
+	<%=yield%>
+</div>
+</div>
+
+
+<footer class="footer text-center">
+  <div class="container">
+    <div class = "row">
+      <div class = "col-xs-12 col-md-4">
+        <h4>Contact</h4>
+        <p>contact@techrise.me</p>
+      </div>
+      <div class = "col-xs-12 col-md-4">
+        <h4>Find Us</h4>
+        <div style="font-size: 40px;">
+          <a href = "#"><i class="fa fa-facebook-official social" ></i></a>
+          <a href = "#"><i class="fa fa-twitter-square social" ></i></a>
+          <a href = "#"><i class="fa fa-linkedin-square social" ></i></a>
+        </div>
+      </div>
+      <div class = "col-xs-12 col-md-4">
+        <h4>© TECHRISE 2016</h4>
+        <p>All Rights Reserved</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
