--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -28,5 +28,5 @@ body {
 /* Set the fixed height of the footer here */
 #footer {
   height: 120px;
-  background-color: #f5f5f5;
+  background-color: rgba(255,255,0,1);
 }
