--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,13 +1,13 @@
 .navbar-default .navbar-brand{
 	font-family: 'Orbitron', sans-serif;
 	font-size: 30px;
-	color: red;
+	color: red !important;
 }
 
 .navbar-default{
 	font-weight: 100px;
 	color: white;
-	background: white;
+	background: blue !important;
 }
 html,
 body {
@@ -28,5 +28,5 @@ body {
 /* Set the fixed height of the footer here */
 #footer {
   height: 120px;
-  background-color: rgba(255,255,0,1);
+  background-color: blue !important;
 }
