--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
       
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Random Player</a></li>
-        <li><a href="#">About</a></li>
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Random Player', random_path %></a></li>
+        <li><%= link_to 'About', about_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
