--- a/app/views/static_pages/random.html.erb
+++ b/app/views/static_pages/random.html.erb
@@ -1,4 +1,4 @@
-
+<% if @idea.present? %>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h1 class="panel-title"> <h2><%= @player.name %></h2></h1>
@@ -20,3 +20,4 @@
 
   </div>
 </div>
+<% end %>
