--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -10,12 +10,12 @@
 }
 html,
 body {
+background-color: transparent;
   height: 100%;
   font-family: 'Orbitron', sans-serif;
 }
 
 html {
-  background: url("http://hdwplan.com/wp-content/uploads/2016/08/red-background-soccer-wallpaper.jpg")  no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
