--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -10,9 +10,11 @@
 }
 html,
 body {
-background-color: transparent;
   height: 100%;
   font-family: 'Orbitron', sans-serif;
+  background-color: #bb4d4d;
+  opacity: 1;
+  
 }
 
 html {
