--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,8 @@
       <div class = "col-xs-12 col-md-4">
         <h4>Find Us</h4>
         <div style="font-size: 40px;">
-          <a href = "#"><i class="fa fa-facebook-official social" ></i></a>
-          <a href = "#"><i class="fa fa-twitter-square social" ></i></a>
+          <a href = "https://www.facebook.com/aashik.yadav"><i class="fa fa-facebook-official social" ></i></a>
+          <a href = "https://twitter.com/AasicqZadab"><i class="fa fa-twitter-square social" ></i></a>
           <a href = "#"><i class="fa fa-linkedin-square social" ></i></a>
         </div>
       </div>
